corrected file/folder naming conventions appropriately

--- a/contact.html
+++ b/contact.html
@@ -9,11 +9,16 @@
 		<link rel="stylesheet" type="text/css" href="css/dStyle.css">
 
 	</head>
+
 	<body>
 		
 		<header>
 		
-		<h1>Always Be Learning</h1>
+		<div id="header_container">
+
+			<h1>Always Be Learning</h1>
+    		
+		</div>
 		
 		</header>
 	
