--- a/index.html
+++ b/index.html
@@ -6,48 +6,68 @@
 
 		<title>Dillon Faulkner | Home | Always Be Learning</title>
 		
-		<link rel="stylesheet" type="text/css" href="css/dStyle.css">
+		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 	</head>
 
 	<body>
 		
-		<header>
+	<header class="menuBar">
 		
-		<div id="header_container">
+		<div id="myName">
 
-			<h1>Always Be Learning</h1>
+			<h1>Dillon Faulkner</h1>
+    		
+		</div>
+
+		<div id="menuOptions">
+
+			<p>About</p>
+
+			<p>Portfolio</p>
+
+			<p>Contact</p>
     		
 		</div>
 		
-		</header>
-	
-	<div class="container">
+	</header>
 		
-		<section id="main-bio">
+	<section id="about">
 
-		<h2>Dillon Faulkner</h2>
+		<div id="aboutBox">
 
-		<img src="images/mePic.png" alt="Dillon Faulkner Picture" id="bio-image">
+			<h1>About Me</h1>
 
-		<p>This is a paragraph about me that I am writing about me. What a joy it is to write about me. How many sentences are in a paragraph again? I think this should be good enough.</p>
+			<hr>
 
-		</section>
+			<img src="assets/images/mePic.png" alt="Dillon Faulkner Picture" id="bioPic">
 
-		<section id="contact-info">
+			<p>This is a paragraph about me that I am writing about me. What a joy it is to write about me. How many sentences are in a paragraph again? I think this should be good enough.</p>
 
-		<h2>Contact Info</h2>
+			<p>This is a paragraph about me that I am writing about me. What a joy it is to write about me. How many sentences are in a paragraph again? I think this should be good enough.</p>
 
-		<ul>
-			<li><strong>Email: <a href="mailto:Kist221@gmail.com">Kist221@gmail.com</a></strong></li>
-			<li><strong>Git: <a href="https://github.com/Kist221">Kist221</a></strong></li>
-			<li><strong>Portfolio: <a href="https://kist221.deviantart.com">DeviantArt</a></strong></li>
-		</ul>
-		
-		</section>
+		</div>
 
-	</div>
-	
+	</section>
+
+	<section class="connect">
+
+		<div id="connectBox">
+
+			<h2>Connect With Me</h2>
+
+			<hr>
+
+			<ul>
+				<li><strong>Email: <a href="mailto:Kist221@gmail.com">Kist221@gmail.com</a></strong></li>
+				<li><strong>Git: <a href="https://github.com/Kist221">Kist221</a></strong></li>
+				<li><strong>Portfolio: <a href="https://kist221.deviantart.com">DeviantArt</a></strong></li>
+			</ul>
+			
+		</div>
+
+	</section>
+
 	</body>
 
 </html>
