--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 
 	</header>
 	
-	<section id="pageBody">
+	<div id="pageBody">
 
 	<section id="about">
 
-			<h1>About Me</h1>
+			<h2>About Me</h2>
 
 			<hr>
 
@@ -62,17 +62,17 @@
 
 			<ul>
 
-				<li><strong>Email: <a href="mailto:Kist221@gmail.com">Kist221@gmail.com</a></strong></li>
+				<li><a href="https://github.com/Kist221" target="_blank"><img src="assets/images/Pic.png" alt="Github" class="social"></a></li>
 				
-				<li><strong>Git: <a href="https://github.com/Kist221">Kist221</a></strong></li>
+				<li><a href="https://www.linkedin.com/in/dillonfaulkner/" target="_blank"><img src="assets/images/Pic.png" alt="LinkedIn" class="social"></a></li>
 				
-				<li><strong>Portfolio: <a href="https://kist221.deviantart.com">DeviantArt</a></strong></li>
+				<li><a href="https://stackoverflow.com" target="_blank"><img src="assets/images/Pic.png" alt="StackOverflow" class="social"></a></li>
 
 			</ul>
 
 	</section>
 
-	</section>
+	</div>
 	
 	<footer class="footer">
 		
