--- a/index.html
+++ b/index.html
@@ -46,28 +46,26 @@
 
 			<hr>
 
-			<img src="assets/images/mePic.png" alt="Dillon Faulkner Picture" id="bioPic">
+			<img src="assets/images/mePic.png" alt="Dillon Faulkner Portfolio Picture" id="bioPic">
 
-			<p>This is a paragraph about me that I am writing about me. What a joy it is to write about me. How many sentences are in a paragraph again? I think this should be good enough.</p>
+			<p>Hello! My name is Dillon, and this is my portfolio site. You know how you should never brag about yourself? Well that's what this site is for... I'd rather you just talk to some references though, and let them speak honestly about how amazing I am.</p>
 
-			<p>This is a paragraph about me that I am writing about me. What a joy it is to write about me. How many sentences are in a paragraph again? I think this should be good enough.</p>
+			<p>My primary passion is in learning new things. I'm very zealous in actively educating myself and others in topics of interest. I am always up for challenging tasks or projects regardless of past experience.</p>
 
 	</section>
 
 	<section class="connect">
 
-			<h2>Connect With Me</h2>
+			<h3>Connect With Me</h3>
 
 			<hr>
-
+			
 			<ul>
-
-				<li><a href="https://github.com/Kist221" target="_blank"><img src="assets/images/Pic.png" alt="Github" class="social"></a></li>
+				<li><a href="https://github.com/Kist221" target="_blank"><img src="assets/images/gitLogo.png" alt="Github" class="social"></a></li>
 				
-				<li><a href="https://www.linkedin.com/in/dillonfaulkner/" target="_blank"><img src="assets/images/Pic.png" alt="LinkedIn" class="social"></a></li>
+				<li><a href="https://www.linkedin.com/in/dillonfaulkner/" target="_blank"><img src="assets/images/linkLogo.png" alt="LinkedIn" class="social"></a></li>
 				
-				<li><a href="https://stackoverflow.com" target="_blank"><img src="assets/images/Pic.png" alt="StackOverflow" class="social"></a></li>
-
+				<li><a href="https://stackoverflow.com" target="_blank"><img src="assets/images/stackLogo.png" alt="StackOverflow" class="social"></a></li>
 			</ul>
 
 	</section>
@@ -78,7 +76,7 @@
 		
 		<div class="footerDiv">
 
-			<p>© Copyright 2017 Dillon Faulkner</p>
+			<p>Copyright © 2017 - Dillon Faulkner - Kist221</p>
 
 		</div>
 
