--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 		<meta charset="utf-8">
 
-		<title>Dillon Faulkner | Home | Always Be Learning</title>
+		<title>Home | Dillon Faulkner | Always Be Learning</title>
 		
 		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 
@@ -28,9 +28,9 @@
 
 			<p><a href="#">About</a></p>
 				<h6>|</h6>		
-			<p><a href="#">Portfolio</a></p>
+			<p><a href="portfolio.html">Portfolio</a></p>
 				<h6>|</h6>		
-			<p><a href="#">Contact</a></p>
+			<p><a href="contact.html">Contact</a></p>
     		
 		</div>
 		
