--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
 
 			<hr>
 
-			<form action="action_page.php">
+			<form action="mailto:Dillon@csdesignstudios.com">
 			
 			<p>Name</p>
 			<input type="text" name="Name" placeholder="John Smith" required="true">
